--- a/index.html
+++ b/index.html
@@ -10,8 +10,25 @@
 </head>
 <body>
     <header>
+      <div class="bg-danger container-fluid">
+        <div class="row justify-content-center textofoot">
+          <div class="col-1 mt-2">
+            <img src="https://firebasestorage.googleapis.com/v0/b/el-sufragio.appspot.com/o/marcador-de-posicion%20(1).png?alt=media&token=973953f4-a011-458f-9be0-b4b0223bd273" alt="ubi" class="img-fluid">
+          </div>
+          <div class="col mt-2">
+            <p>Carrera 39 No. 54-31 Barrio Boston (Medellín)</p>
+          </div>
+          <div class="col-1 mt-2">
+            <img src="https://firebasestorage.googleapis.com/v0/b/el-sufragio.appspot.com/o/llamada-telefonica.png?alt=media&token=7de467b1-ec3b-4b25-a6ff-36740f0d5ee4" alt="telefono"
+            class="img-fluid">
+          </div>
+          <div class="col mt-2">
+            <p>(+574) 217 4143</p>
+          </div>
+        </div>
+      </div>
         <nav class="navbar navbar-expand-lg bg-light">
-            <div class="container-fluid">
+            <div class="container-fluid mt-3">
               <a class="navbar-brand" href="#">Navbar</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -64,19 +81,20 @@
                 <div class="col-6">
                     <h2>Reseña Estudiante</h2>
                     <img src="" alt="">
-                    <p>soy un estudiante del Colegio Salesiano el </p>
+                    <p>Mi nombre es Andres Felipe Ruiz y soy un estudiante del Colegio Salesiano el Sufragio llevo estudiando en el colegio desde jardin, pero pase un tiempo sin estudiar en el colegio porque me fui para estados unidos </p>
                 </div>
             </div>
         </div>
     </main>
     <footer>
-        <div class="container bg-dark">
-            <div class="row">
-                <div class="col-6">
-
+        <div class="container-fluid bg-dark">
+            <div class="row justify-content-center textofoot">
+                <div class="col-6 mt-3">
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, unde.</p>
                 </div>
-                <div class="col-6">
-                    
+                <div class="col-6 mt-3">
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Hic, et?
+                    </p>
                 </div>
             </div>
         </div>
