voy en la pagina de profesores

--- a/index.html
+++ b/index.html
@@ -65,9 +65,7 @@
         </nav>
     </header>
     <main>
-        <section>
-            <video src="https://firebasestorage.googleapis.com/v0/b/el-sufragio.appspot.com/o/y2mate.com%20-%20So%C3%B1amos%20un%20mundo%20mejor_1080p.mp4?alt=media&token=978bc1b3-bde2-45a3-b298-91c81a21e69d" class="w-100" muted autoplay loop></video>
-        </section>
+        <video src-="https://firebasestorage.googleapis.com/v0/b/el-sufragio.appspot.com/o/y2mate.com%20-%20So%C3%B1amos%20un%20mundo%20mejor_1080p.mp4?alt=media&token=f93c4e18-4684-4b8f-87f3-ab9f3d2292c5" class="w-100" muted autoplay loop></video>
         <div class="mt-5 texto container">
             <div class="row">
                 <div class="col-6">
