--- a/administradores.html
+++ b/administradores.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Estudiantes</title>
-    <link rel="stylesheet" href="estilos.css">
+    <title>administradores</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
     <header>
@@ -66,57 +66,35 @@
                 </div>
               </div>
           </nav>
-    </header>
-    <main>
-        <section>
-        <img src="https://firebasestorage.googleapis.com/v0/b/el-sufragio.appspot.com/o/instalaciones-colegio-el-sufragio-medellin-comunidad-salesianos-don-bosco-8.jpg?alt=media&token=6effab43-9679-4207-aaae-92a3cb1a3d4f" alt="banner" class="w-100 img-fluid">
-        </section>
-        <div class="mt-5 container">
-            <div class="row mt-2">
-                <div class="col-8">
-                    <h1>Preescolar</h1>
-                    <p>Un espacio para crecer, explorar y descubrir el mundo, mediante el desarrollo integral de las dimensiones.
-                    Nuestros niños siempre están al cuidado de su directora de grupo con el apoyo de una practicante, velando así por su bienestar.
-                    Tenemos un especial énfasis en el desarrollo de la corporalidad (Ed. Física), la motricidad (Artística), la exploración (Laboratorios de ciencia), la comunicación (Inglés) y el acercamiento al mundo virtual (tecnología), gracias a la intervención de varios docentes expertos en estas habilidades.</p>
-                </div>
-                <div class="col-4">
-                    <img src="https://firebasestorage.googleapis.com/v0/b/el-sufragio.appspot.com/o/pres.jpg?alt=media&token=a5e37e68-0d64-4d51-8ef3-03b3d8f625b1" alt="preescolar" class="img_fluid w-100">
-                </div>
-            </div>
-            <div class="row mt-2">
-                <div class="col-8">
-                    <h1>Primaria</h1>
-                    <p>A partir del grado primero se maneja profesorado, esto nos permite que cada docente sea experto en su área, además de enriquecer el crecimiento de los estudiantes, ya que logran encontrarse con diversas metodologías. No te preocupes: Al ingresar a la institución, se hace todo un trabajo gradual para que los niños vayan lentamente incorporándose a la jornada y dinámica académica.</p>
-                </div>
-                <div class="col-4">
-                    <img src="https://firebasestorage.googleapis.com/v0/b/el-sufragio.appspot.com/o/primaria.jpg?alt=media&token=dc8a293c-02e9-4790-aed9-4ef590ee699f" alt="" class="img_fluid w-100">
-                </div>
-            </div>
-            <div class="row mt-2">
-                <div class="col-8">
-                    <h1>Bachillerato</h1>
-                    <p>Nuestro modelo pedagógico integrador favorece el aprendizaje de competencias a partir de las actividades integradoras que se planean desde diferentes áreas, asimilando el conocimiento como un todo. Para nosotros es de gran importancia el fortalecimiento del inglés, por lo tanto, tenemos una intensidad horaria semanal de 4 horas desde 1° a 11° con el apoyo de Richmond Solutions </p>
-                </div>
-                <div class="col-4">
-                    <img src="https://firebasestorage.googleapis.com/v0/b/el-sufragio.appspot.com/o/colegio-el-sufragio-medellin-comunidad-salesianos-don-bosco-nuestros-simbolos.jpg?alt=media&token=d55a1d38-c4b2-4ed0-966e-1ba61bd0015c" alt="bachi" class="img-fluid w-100">
-                </div>
-            </div>
-        </div>
-        <a href="formestudiantes.html">
-        <div class="container mt-3">
+      </header>
+      <main>
+        <img src="https://firebasestorage.googleapis.com/v0/b/el-sufragio.appspot.com/o/maxresdefault.jpg?alt=media&token=9c07449c-6288-450a-94fa-9dc94c97850d" alt="rr" class="w-100 img-fluid">
+        <div class="container-fluid">
             <div class="row justify-content-center">
-                <div class="col-1">
-                    <button>
-                        <p>INSCRIBETE</p>
-                    </button>
+                <div class="col-6">
+                    <h1>metodologia</h1>
+                    <p>Somos un colegio de alta calidad que forma en conocimientos para la vida.
+                    Formamos en valores Cristianos y Ciudadanos, llevamos a cada niño y joven a encontrarse con Dios y con los demás desde la espiritualidad salesiana.
+                    Nuestro modelo pedagógico integrador está basado en competencias, a través del cual se fortalece la investigación.
+                    Estamos ubicados en el corazón social y cultural de la ciudad. Una zona céntrica con fáciles vías de acceso.</p>
                 </div>
             </div>
         </div>
-        </a>
-    </main>
-    <footer>
+        <a href="formadministradores.html">
+            <div class="container mt-3">
+                <div class="row justify-content-center">
+                    <div class="col-1">
+                        <button>
+                            <p>INSCRIBETE</p>
+                        </button>
+                    </div>
+                </div>
+            </div>
+            </a>
+      </main>
+      <footer>
 
-    </footer>
+      </footer>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 <script src="controlador.js"></script>
