--- a/profesores.html
+++ b/profesores.html
@@ -10,8 +10,63 @@
 </head>
 <body>
     <header>
-
-    </header>
+        <div class="bg-danger container-fluid">
+          <div class="row justify-content-center textofoot">
+            <div class="col-1 mt-2">
+              <img src="https://firebasestorage.googleapis.com/v0/b/el-sufragio.appspot.com/o/marcador-de-posicion%20(1).png?alt=media&token=973953f4-a011-458f-9be0-b4b0223bd273" alt="ubi" class="img-fluid">
+            </div>
+            <div class="col mt-2">
+              <p>Carrera 39 No. 54-31 Barrio Boston (Medellín)</p>
+            </div>
+            <div class="col-1 mt-2">
+              <img src="https://firebasestorage.googleapis.com/v0/b/el-sufragio.appspot.com/o/llamada-telefonica.png?alt=media&token=7de467b1-ec3b-4b25-a6ff-36740f0d5ee4" alt="telefono"
+              class="img-fluid">
+            </div>
+            <div class="col mt-2">
+              <p>(+574) 217 4143</p>
+            </div>
+          </div>
+        </div>
+          <nav class="navbar navbar-expand-lg bg-light">
+              <div class="container-fluid mt-3">
+                <a class="navbar-brand" href="index.html">HOME</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                  <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                      <a class="nav-link active" aria-current="page" href="estudiantes.html">Estudiantes</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="administradores.html">Administradores</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="profesores.html">Profesores</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Dropdown
+                      </a>
+                      <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <li><a class="dropdown-item" href="#">Action</a></li>
+                        <li><a class="dropdown-item" href="#">Another action</a></li>
+                        <li><hr class="dropdown-divider"></li>
+                        <li><a class="dropdown-item" href="#">Something else here</a></li>
+                      </ul>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link disabled">Disabled</a>
+                    </li>
+                  </ul>
+                  <form class="d-flex" role="search">
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit">Search</button>
+                  </form>
+                </div>
+              </div>
+          </nav>
+      </header>
     <main>
         <div class="container">
             <div class="row mt-5">
@@ -27,14 +82,30 @@
             </div>
             <div class="row mt-5">
                 <div class="col-4">
-
+                    <h4>Preescolar</h4>
+                    <p></p>
                 </div>
                 <div class="col-4">
-
+                    <h4>Primaria</h4>
+                    <p></p>
                 </div>
-                <div class="col-4"></div>
+                <div class="col-4">
+                    <h4>Bachillerato</h4>
+                    <p></p>
+                </div>
             </div>
         </div>
+        <a href="formprofesores.html">
+            <div class="container mt-3">
+                <div class="row justify-content-center">
+                    <div class="col-1">
+                        <button>
+                            <p>INSCRIBETE</p>
+                        </button>
+                    </div>
+                </div>
+            </div>
+            </a>
     </main>
     <footer>
 
